--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://shesh:test234@shesh.blfs8.mongodb.net
 PORT=3000
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=maskofalvarez20221218messithegoatstrikesagain
+ACESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=dimariawithacleanfinish22wcmacallisterwithgoal2ndgoal
+REFRESH_TOKEN_EXPIRY=10d
